[SONAR] Fixed SQL Injection issues - part 3