@@ -60,6 +60,12 @@ import it.eng.spagobi.utilities.assertion.Assert;
 public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataSetDAO {
 
 	private static Logger logger = Logger.getLogger(SbiDataSetDAOImpl.class);
+	private static final String LABEL = "label";
+	private static final String OWNER = "owner";
+	private static final String CATEGORY = "category";
+	private static final String SCOPE = "scope";
+	private static final String ACTIVE = "active";
+	private static final String DS_SCOPE = "DS_SCOPE";
 
 	@Override
 	public SbiDataSet loadSbiDataSetByLabel(String label) {
@@ -80,8 +86,8 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 				Assert.assertNotNull(session, "session cannot be null");
 				transaction = session.beginTransaction();
 				Assert.assertNotNull(transaction, "transaction cannot be null");
-			} catch (Throwable t) {
-				throw new SpagoBIDAOException("An error occured while creating the new transaction", t);
+			} catch (Exception e) {
+				throw new SpagoBIDAOException("An error occured while creating the new transaction", e);
 			}
 			Query hibQuery = session.createQuery("from SbiDataSet h where h.active = ? and h.label = ? ");
 			hibQuery.setBoolean(0, true);
@@ -92,11 +98,11 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 			transaction.commit();
 
 			return sbiDataSet;
-		} catch (Throwable t) {
+		} catch (Exception e) {
 			if (transaction != null && transaction.isActive()) {
 				transaction.rollback();
 			}
-			throw new SpagoBIDAOException("An unexpected error occured while loading dataset whose label is equal to [" + label + "]", t);
+			throw new SpagoBIDAOException("An unexpected error occured while loading dataset whose label is equal to [" + label + "]", e);
 		} finally {
 			if (session != null && session.isOpen()) {
 				session.close();
@@ -115,7 +121,7 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 		SbiDataSet sbiDataSet = null;
 		try {
 			Criteria c = session.createCriteria(SbiDataSet.class);
-			c.addOrder(Order.asc("label"));
+			c.addOrder(Order.asc(LABEL));
 			c.add(Restrictions.eq("id.dsId", id));
 			if (organiz != null) {
 				c.add(Restrictions.eq("id.organization", organiz));
@@ -160,14 +166,14 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 		try {
 			session = getSession();
 			Criteria c = session.createCriteria(SbiDataSet.class);
-			c.addOrder(Order.asc("label"));
+			c.addOrder(Order.asc(LABEL));
 
 			if (page != null && item_per_page != null) {
 				c.setFirstResult((page - 1) * item_per_page);
 				c.setMaxResults(item_per_page);
 			}
 
-			c.add(Restrictions.like("label", search == null ? "" : search, MatchMode.ANYWHERE).ignoreCase());
+			c.add(Restrictions.like(LABEL, search == null ? "" : search, MatchMode.ANYWHERE).ignoreCase());
 			onlyActive(c);
 
 			if (ids != null && ids.length > 0) {
@@ -182,22 +188,22 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 
 				logger.debug("For final user take only owned, enterprise and shared");
 
-				SbiDomains scopeUserDomain = DAOFactory.getDomainDAO().loadSbiDomainByCodeAndValue("DS_SCOPE", SpagoBIConstants.DS_SCOPE_USER);
-				SbiDomains scopeEnterpriseDomain = DAOFactory.getDomainDAO().loadSbiDomainByCodeAndValue("DS_SCOPE", SpagoBIConstants.DS_SCOPE_ENTERPRISE);
-				SbiDomains scopeTechnicalDomain = DAOFactory.getDomainDAO().loadSbiDomainByCodeAndValue("DS_SCOPE", SpagoBIConstants.DS_SCOPE_TECHNICAL);
+				SbiDomains scopeUserDomain = DAOFactory.getDomainDAO().loadSbiDomainByCodeAndValue(DS_SCOPE, SpagoBIConstants.DS_SCOPE_USER);
+				SbiDomains scopeEnterpriseDomain = DAOFactory.getDomainDAO().loadSbiDomainByCodeAndValue(DS_SCOPE, SpagoBIConstants.DS_SCOPE_ENTERPRISE);
+				SbiDomains scopeTechnicalDomain = DAOFactory.getDomainDAO().loadSbiDomainByCodeAndValue(DS_SCOPE, SpagoBIConstants.DS_SCOPE_TECHNICAL);
 
 				Disjunction or = Restrictions.disjunction();
 
 				// OWNER OR
 
 				// take owned datasets
-				or.add(Restrictions.eq("owner", ((UserProfile) finalUserProfile).getUserId().toString()));
+				or.add(Restrictions.eq(OWNER, ((UserProfile) finalUserProfile).getUserId().toString()));
 
 				// get categories
 				Set<Domain> categoryList = UserUtilities.getDataSetCategoriesByUser(finalUserProfile);
 
 				if (categoryList != null) {
-					if (categoryList.size() > 0) {
+					if (!categoryList.isEmpty()) {
 						SbiCategory[] categoryArray = new SbiCategory[categoryList.size()];
 						int i = 0;
 						for (Iterator iterator = categoryList.iterator(); iterator.hasNext();) {
@@ -209,18 +215,18 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 						}
 						// (IN CATEGORY AND (SCOPE=USER OR SCOPE=ENTERPRISE)) OR SCOPE=TECHNICAL
 						Conjunction andCategories = Restrictions.conjunction();
-						andCategories.add(Restrictions.in("category", categoryArray));
+						andCategories.add(Restrictions.in(CATEGORY, categoryArray));
 
 						Disjunction orScope = Restrictions.disjunction();
-						orScope.add(Restrictions.eq("scope", scopeUserDomain));
-						orScope.add(Restrictions.eq("scope", scopeEnterpriseDomain));
+						orScope.add(Restrictions.eq(SCOPE, scopeUserDomain));
+						orScope.add(Restrictions.eq(SCOPE, scopeEnterpriseDomain));
 
 						andCategories.add(orScope);
 
 						if (seeTechnical != null && seeTechnical) {
 							Disjunction orTechnical = Restrictions.disjunction();
 							orTechnical.add(andCategories);
-							orTechnical.add(Restrictions.eq("scope", scopeTechnicalDomain));
+							orTechnical.add(Restrictions.eq(SCOPE, scopeTechnicalDomain));
 							or.add(orTechnical);
 						} else {
 							or.add(andCategories);
@@ -230,8 +236,8 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 				} else {
 					// if no categoryList take also all USER and ENTERPRISE dataset
 					// SCOPE=USER OR SCOPE=ENTERPRISE)
-					or.add(Restrictions.eq("scope", scopeUserDomain));
-					or.add(Restrictions.eq("scope", scopeEnterpriseDomain));
+					or.add(Restrictions.eq(SCOPE, scopeUserDomain));
+					or.add(Restrictions.eq(SCOPE, scopeEnterpriseDomain));
 				}
 
 				c.add(or);
@@ -260,35 +266,26 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 		logger.debug("IN");
 
 		try {
-			// open session
 			session = getSession();
-
-			// create statement
-			String statement = "from SbiDataSet h where h.active = :active";
-			if (owner != null) {
-				statement += " and (";
-				statement += includeOwned ? "h.owner = :owner" : "h.owner != :owner";
-				statement += ") ";
-			}
-			if (type != null)
-				statement += " and h.scope.valueCd = :type ";
-			if (category != null)
-				statement += " and h.category.code = :category ";
-			if (implementation != null)
-				statement += " and h.type = :implementation ";
-			if (showDerivedDatasets == null || !showDerivedDatasets)
-				statement += " and h.federation is null ";
+			
+			String ownerStatement = String.format(" and (%s) ", Boolean.TRUE.equals(includeOwned) ? "h.owner = :owner" : "h.owner != :owner");
+			String statement = String.format("from SbiDataSet h where h.active = :active%s%s%s%s%s", 
+					(owner != null ? ownerStatement : ""), 
+					(type != null ? " and h.scope.valueCd = :type " : ""), 
+					(category != null ? " and h.category.code = :category " : ""),
+					(implementation != null ? " and h.type = :implementation " : ""),
+					(showDerivedDatasets != null ? " and h.federation is null " : ""));
 
 			// inject parameters
 			Query query = session.createQuery(statement);
-			query.setBoolean("active", true);
+			query.setBoolean(ACTIVE, true);
 			if (owner != null) {
-				query.setString("owner", owner);
+				query.setString(OWNER, owner);
 			}
 			if (type != null)
 				query.setString("type", type);
 			if (category != null)
-				query.setString("category", category);
+				query.setString(CATEGORY, category);
 			if (implementation != null)
 				query.setString("implementation", implementation);
 
@@ -317,11 +314,11 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 			sbiDataSetList = query.list();
 
 			transaction.commit();
-		} catch (Throwable t) {
+		} catch (Exception e) {
 			if (transaction != null && transaction.isActive()) {
 				transaction.rollback();
 			}
-			throw new SpagoBIDAOException("An unexpected error occured while loading dataset", t);
+			throw new SpagoBIDAOException("An unexpected error occured while loading dataset", e);
 		} finally {
 			logger.debug("OUT");
 		}
@@ -349,7 +346,7 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 			Query hqlQuery = aSession.createQuery(hql);
 			hqlQuery.setParameter("search", "%" + search + "%");
 			Long temp = (Long) hqlQuery.uniqueResult();
-			resultNumber = new Integer(temp.intValue());
+			resultNumber = Integer.valueOf(temp.intValue());
 
 		} catch (HibernateException he) {
 			logger.error("Error while loading the list of SbiDataSet", he);
@@ -465,7 +462,7 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 						logger.debug("The owner can see all it's datasets");
 					} else {
 						List<String> collect = categoryList.stream().map(e -> e.getValueCd()).collect(Collectors.toList());
-						cr.createAlias("category", "c");
+						cr.createAlias(CATEGORY, "c");
 						cr.add(Restrictions.in("c.code", collect));
 					}
 				} else {
@@ -483,8 +480,8 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 
 			results = cr.list();
 
-		} catch (Throwable t) {
-			throw new SpagoBIDAOException("An unexpected error occured while loading dataset whose owner is equal to [" + owner + "]", t);
+		} catch (Exception e) {
+			throw new SpagoBIDAOException("An unexpected error occured while loading dataset whose owner is equal to [" + owner + "]", e);
 		} finally {
 			if (session != null && session.isOpen()) {
 				session.close();
@@ -520,8 +517,8 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 					" and ds.scope.valueId in (select dom.valueId from SbiDomains dom where dom.valueCd in ('USER', 'ENTERPRISE') and dom.domainCd = 'DS_SCOPE')");
 
 			Query query = session.createQuery(statement.toString());
-			query.setBoolean("active", true);
-			query.setString("owner", userProfile.getUserId().toString());
+			query.setBoolean(ACTIVE, true);
+			query.setString(OWNER, userProfile.getUserId().toString());
 
 			if (categoryIds != null && !categoryIds.isEmpty())
 				query.setParameterList("categories", categoryIds);
@@ -557,14 +554,14 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 	}
 
 	private void withDerived(Criteria cr, Boolean showDerivedDatasets) {
-		if (!showDerivedDatasets) {
+		if (Boolean.FALSE.equals(showDerivedDatasets)) {
 			cr.add(Restrictions.isNull("federation"));
 		}
 	}
 
 	private void withDsTypeCd(Criteria cr, String type) {
 		if (StringUtils.isNotEmpty(type)) {
-			cr.createAlias("scope", "s");
+			cr.createAlias(SCOPE, "s");
 			cr.add(Restrictions.eq("s.valueCd", type));
 		}
 	}
@@ -659,20 +656,20 @@ public class SbiDataSetDAOImpl extends AbstractHibernateDAO implements ISbiDataS
 	}
 
 	private Criterion onlyActiveRestriction() {
-		return Restrictions.eq("active", true);
+		return Restrictions.eq(ACTIVE, true);
 	}
 
 	private Criterion notOwnedRestriction(String owner) {
-		return Restrictions.ne("owner", owner);
+		return Restrictions.ne(OWNER, owner);
 	}
 
 	private Criterion ownedByRestriction(String owner) {
-		return Restrictions.eq("owner", owner);
+		return Restrictions.eq(OWNER, owner);
 	}
 
 	private Criterion ownedByRestriction(IEngUserProfile userProfile) {
 		String owner = userProfile.getUserUniqueIdentifier().toString();
-		return Restrictions.eq("owner", owner);
+		return Restrictions.eq(OWNER, owner);
 	}
 
 }
