@@ -43,7 +43,7 @@ public class JDBCBigQueryDataProxy extends JDBCDataProxy {
 	private int fetchSize;
 	private int offset;
 
-	private static transient Logger logger = Logger.getLogger(JDBCBigQueryDataProxy.class);
+	private static final Logger logger = Logger.getLogger(JDBCBigQueryDataProxy.class);
 
 	public JDBCBigQueryDataProxy(int offsetParam, int fetchSizeParam) {
 		this.setCalculateResultNumberOnLoad(true);
@@ -168,7 +168,7 @@ public class JDBCBigQueryDataProxy extends JDBCDataProxy {
 
 			if (resultNumber > -1) { // it means that resultNumber was successfully calculated by this data proxy
 				int limitedResultNumber = getMaxResults() > 0 && resultNumber > getMaxResults() ? getMaxResults() : resultNumber;
-				dataStore.getMetaData().setProperty("resultNumber", new Integer(limitedResultNumber));
+				dataStore.getMetaData().setProperty("resultNumber", Integer.valueOf(limitedResultNumber));
 			}
 
 		} finally {
@@ -202,15 +202,15 @@ public class JDBCBigQueryDataProxy extends JDBCDataProxy {
 			if (!dialect.toLowerCase().contains("orient")) {
 				tableAlias = "temptable";
 			}
-			String sqlQuery = "SELECT COUNT(*) FROM (" + getOldStatement() + ") " + tableAlias;
+			String sqlQuery = String.format("SELECT COUNT(*) FROM (%s) %s", getOldStatement(), tableAlias);
 			logger.info("Executing query " + sqlQuery + " ...");
 			stmt = connection.prepareStatement(sqlQuery, ResultSet.TYPE_FORWARD_ONLY, ResultSet.CONCUR_READ_ONLY);
 			
 			rs = stmt.executeQuery();
 			rs.next();
 			resultNumber = rs.getInt(1);
-		} catch (Throwable t) {
-			throw new SpagoBIRuntimeException("An error occurred while creating connection steatment", t);
+		} catch (Exception e) {
+			throw new SpagoBIRuntimeException("An error occurred while creating connection steatment", e);
 		} finally {
 			releaseResources(null, stmt, rs);
 		}
@@ -308,11 +308,9 @@ public class JDBCBigQueryDataProxy extends JDBCDataProxy {
 	@Override
 	public String getStatement() {
 
-		if (fetchSize == -1) {
-			if (!this.statement.isEmpty()) {
+		if (fetchSize == -1 && !this.statement.isEmpty()) {
 				this.statement = removeLastSemicolon(this.statement);
 				return this.statement;
-			}
 		}
 
 		StringBuilder newStatement = new StringBuilder();
